--- a/templates/patient/header.html
+++ b/templates/patient/header.html
@@ -31,7 +31,7 @@
           </li>
   
           <li>
-            <a href="{{ url_for('.patient_save') }}">Wellness Plan</a>
+            <a href="{{ url_for('.patient_wellnessplan') }}">Wellness Plan</a>
           </li>
           <li>
             <a href="{{ url_for('.patient_schedule') }}">Schedule</a>
