--- a/templates/patient/wellnessplan.html
+++ b/templates/patient/wellnessplan.html
@@ -89,9 +89,13 @@
       <option value="Brain tumor">Brain tumor</option>
       <option value="Osteosarcoma">Osteosarcoma</option>
       <option value="Acute Lymphoblastic Leukemia">Acute Lymphoblastic Leukemia</option>
-      <option value="Hodgkin's Lymphoma">Hodgkin's Lymphoma</option>
+      <option value="Hodgkin's Lymphoma">Hodgkins Lymphoma</option>
       <option value="Fibrosarcoma">Fibrosarcoma</option>
       <option value="Non-Hodgkin Lymphoma">Non-Hodgkin Lymphoma</option>
+      <option value="Myoloma">Myoloma</option>
+      <option value="Hydrocephalus">Hydrocephalus</option>
+      <option value="Wilms Tumor">Wilms Tumor</option>
+      <option value="Rhabdomyosarcoma">Rhabdomyosarcoma</option>
     </select>
   </div>
 
