--- a/templates/patient/plan.html
+++ b/templates/patient/plan.html
@@ -43,7 +43,7 @@
     body {
       display: grid;
       align-items: center;
-      background-image: url("{{ url_for('static', filename='img/inventory_bg.jpg') }}"); /* Replace with your image path */
+      background-image: url("{{ url_for('static', filename='img/wellnessplan_bg.png') }}"); /* Replace with your image path */
       background-size: cover; /* Ensures the background image covers the entire div */
       background-position: center; /* Centers the background image */
     }
