--- a/templates/patient/patientweeks.html
+++ b/templates/patient/patientweeks.html
@@ -40,7 +40,7 @@
         }
   body {
     
-    background-image: url("{{ url_for('static', filename='img/inventory_bg.jpg') }}"); /* Replace with your image path */
+    background-image: url("{{ url_for('static', filename='img/wellnessplan_bg.png') }}"); /* Replace with your image path */
     background-size: cover; /* Ensures the background image covers the entire div */
     background-position: center; /* Centers the background image */
   }
