--- a/templates/patient/wellnessplan.html
+++ b/templates/patient/wellnessplan.html
@@ -18,7 +18,7 @@
    
    }
   body {
-    background-image: url("{{ url_for('static', filename='wellnessplan_bg.png') }}"); /* Replace with your image path */
+    background-image: url("{{ url_for('static', filename='img/wellnessplan_bg.png') }}"); /* Replace with your image path */
     background-size: cover; /* Ensures the background image covers the entire div */
     background-position: center; /* Centers the background image */
   }
