--- a/templates/patient/wellnessplan.html
+++ b/templates/patient/wellnessplan.html
@@ -88,14 +88,15 @@
       <option value="">Select Diagnosis</option>
       <option value="Brain tumor">Brain tumor</option>
       <option value="Osteosarcoma">Osteosarcoma</option>
-      <option value="Acute Lymphoblastic Leukemia">Acute Lymphoblastic Leukemia</option>
+      <option value="Acute Lymphocytic Leukemia">Acute Lymphocytic Leukemia</option>
       <option value="Hodgkin's Lymphoma">Hodgkins Lymphoma</option>
       <option value="Fibrosarcoma">Fibrosarcoma</option>
       <option value="Non-Hodgkin Lymphoma">Non-Hodgkin Lymphoma</option>
-      <option value="Myoloma">Myoloma</option>
+      <option value="Multiple Myeloma">Multiple Myeloma</option>
       <option value="Hydrocephalus">Hydrocephalus</option>
       <option value="Wilms Tumor">Wilms Tumor</option>
       <option value="Rhabdomyosarcoma">Rhabdomyosarcoma</option>
+      <option value="Retinoblastoma">Retinoblastoma</option>
     </select>
   </div>
 
