--- a/templates/patient/wellnessplan.html
+++ b/templates/patient/wellnessplan.html
@@ -89,11 +89,10 @@
       <option value="Brain tumor">Brain tumor</option>
       <option value="Osteosarcoma">Osteosarcoma</option>
       <option value="Acute Lymphocytic Leukemia">Acute Lymphocytic Leukemia</option>
-      <option value="Hodgkin's Lymphoma">Hodgkins Lymphoma</option>
+      <option value="Hodgkin Lymphoma">Hodgkin Lymphoma</option>
       <option value="Fibrosarcoma">Fibrosarcoma</option>
       <option value="Non-Hodgkin Lymphoma">Non-Hodgkin Lymphoma</option>
       <option value="Multiple Myeloma">Multiple Myeloma</option>
-      <option value="Hydrocephalus">Hydrocephalus</option>
       <option value="Wilms Tumor">Wilms Tumor</option>
       <option value="Rhabdomyosarcoma">Rhabdomyosarcoma</option>
       <option value="Retinoblastoma">Retinoblastoma</option>
