--- a/templates/patient/plan.html
+++ b/templates/patient/plan.html
@@ -724,7 +724,7 @@
               {% endif %}
             
 
-             {% if diagnosis in ['Hodgkin\'s Lymphoma', 'Non-Hodgkin Lymphoma'] and day in ['monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday', 'sunday'] %}
+             {% if diagnosis in ['Hodgkin Lymphoma', 'Non-Hodgkin Lymphoma'] and day in ['monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday', 'sunday'] %}
                   {% if age|int in range(1, 3) %}
                     <h2>Tummy Time (15 minutes daily)</h2>
                     <p>Lay a clean, soft mat on the floor.</p>
@@ -2018,7 +2018,7 @@
               </p>{% endif %}
 
 
-            {% if age| int >= 1 and diagnosis in [ 'Osteosarcoma', 'Acute Lymphocytic Leukemia'] and day in [ 'sunday'] %}<br><p>
+            {% if age| int >= 1 and diagnosis in [ 'Osteosarcoma', 'Acute Lymphocytic Leukemia'] and day in [ 'monday'] %}<br><p>
               <h2>Methotrexate</h2>
               <p><strong>Schedule of Intake:</strong> Often administered weekly or as a high-dose infusion every 2-3 weeks, depending on the treatment protocol.</p>
               <p><strong>Dosage Calculation:</strong> Dosages are typically based on body surface area (BSA) rather than age or weight. The common dose ranges from 12 to 15 grams per square meter of BSA per cycle. For a child or adolescent, the specific dose would be determined by their oncologist.                  . </p>
@@ -2055,7 +2055,7 @@
               <p><strong>Dosage Calculation:</strong> The dosage of the medicine will depend on the weight and height of the patient.</p>
             </p>{% endif %}
 
-            {% if age|int >= 5 and diagnosis in [ 'Hodgkin Lymphoma'] and day in ['monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday', 'sunday'] %}<br><p>
+            {% if age|int >= 5 and diagnosis == 'Hodgkin Lymphoma' and day in ['monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday', 'sunday'] %}<br><p>
               <h2>Bleomycin</h2>
               <p><strong>Schedule of Intake:</strong> Every 2 or 3 weeks: In other protocols, bleomycin might be given every 2 or 3 weeks. </p>
               <p><strong>Dosage Calculation:</strong> For children, the dose is generally around 0.5 to 1.5 mg/m² BSA per day. For example, an 18-year-old with a BSA of 1.8 m² might receive a dose of 0.9 to 2.7 mg daily.                  . </p>
