--- a/templates/patient/plan.html
+++ b/templates/patient/plan.html
@@ -2114,7 +2114,7 @@
       <div class="content">
         <h2>Food Restriction</h2>
         {% if age|int >= 1 and diagnosis in [ 'Acute Lymphocytic Leukemia'] and day in ['monday', 'tuesday', 'wednesday', 'thursday', 'friday'] %}<br><p>
-          <h3>INTERVENTION</h3>
+          <h3></h3>
           <p><b>Raw or Undercooked Foods:</b></p>
               <p>Avoid raw or undercooked meat, poultry, seafood, and eggs to reduce the risk of infections.</p>
               <p>Stay away from sushi, sashimi, and raw shellfish.</p>
@@ -2145,7 +2145,7 @@
               <p>Avoid foods from buffets, salad bars, and other self-serve food stations to reduce the risk of contamination.</p>
 
        
-        <br/><h3>EVALUATION</h3>
+        <br/><h3>Food Restriction Suggests...</h3>
         <p><b>Hydration:</b></p>
         <p>Drink plenty of fluids, but avoid tap water that may not be safe. Opt for bottled water or boiled water.</p>
        
@@ -2162,7 +2162,7 @@
         </p>{% endif %}
 
         {% if age|int >= 1 and diagnosis in [ 'Retinoblastoma'] and day in ['monday', 'tuesday', 'wednesday', 'thursday', 'friday'] %}<br><p>
-          <h3>INTERVENTION</h3>
+          <h3></h3>
           <p><b>Avoid Raw Fruits and Vegetables:</b></p>
           <p>To reduce the risk of bacterial contamination, opt for cooked or steamed vegetables instead.</p>
           
@@ -2184,7 +2184,7 @@
           <p><b>Avoid Caffeinated Beverages:</b></p>
           <p>Such as coffee, black tea, and energy drinks, which can cause dehydration and interfere with sleep.</p>
        
-        <br/><h3>EVALUATION</h3>
+        <br/><h3>Food Restriction Suggests...</h3>
         <p><b>Hydration:</b></p>
         <p>Ensure adequate fluid intake, primarily water, to stay hydrated.</p>
         
@@ -2200,7 +2200,7 @@
         </p>{% endif %}
 
         {% if age|int >= 1 and diagnosis in [ 'Fibrosarcoma'] and day in ['monday', 'tuesday', 'wednesday', 'thursday', 'friday'] %}<br><p>
-          <h3>INTERVENTION</h3>
+          <h3></h3>
           <p><b>Avoid Raw or Undercooked Foods:</b></p>
           <p>To reduce the risk of infection due to a weakened immune system, avoid raw or undercooked foods.</p>
           
@@ -2213,7 +2213,7 @@
           <p><b>Avoid Alcohol:</b></p>
           <p>Alcohol can interfere with the effectiveness of chemotherapy and exacerbate side effects, so it’s best to avoid it.</p>          
        
-        <br/><h3>EVALUATION</h3>
+        <br/><h3>Food Restriction Suggests...</h3>
         <p><b>Hydration:</b></p>
         <p>Drink plenty of water and avoid caffeinated and sugary drinks to maintain proper hydration.</p>
         
@@ -2226,7 +2226,7 @@
         </p>{% endif %}
 
         {% if age|int >= 1 and diagnosis in [ 'Non-Hodgkin Lymphoma','Hodgkin Lymphoma' ] and day in ['monday', 'tuesday', 'wednesday', 'thursday', 'friday'] %}<br><p>
-          <h3>INTERVENTION</h3>
+          <h3></h3>
           <p><b>Avoid Raw or Undercooked Foods:</b></p>
           <p>To minimize the risk of infection, steer clear of raw fish (sushi, sashimi), undercooked meat or poultry, and raw eggs or foods containing them (e.g., homemade mayonnaise).</p>
           
@@ -2245,7 +2245,7 @@
           <p><b>Avoid Greasy, Fatty, and Fried Foods:</b></p>
           <p>These types of foods can worsen nausea and digestive discomfort.</p>
           
-        <br/><h3>EVALUATION</h3>
+        <br/><h3>Food Restriction Suggests...</h3>
         <p><b>Small, Frequent Meals:</b></p>
         <p>Eating small, frequent meals can help manage appetite and prevent nausea.</p>
         
@@ -2261,7 +2261,7 @@
         </p>{% endif %}
 
         {% if age|int >= 1 and diagnosis in [ 'Brain tumor' ] and day in ['monday', 'tuesday', 'wednesday', 'thursday', 'friday'] %}<br><p>
-          <h3>INTERVENTION</h3>
+          <h3></h3>
           <p><b>Avoid Caffeinated Beverages and Foods:</b></p>
           <p>Caffeine can exacerbate headaches and cause dehydration, which may worsen symptoms.</p>
           
@@ -2284,7 +2284,7 @@
           <p>Excessive sodium can lead to hypertension and fluid retention, exacerbating symptoms and complicating treatment.</p>
           
           
-        <br/><h3>EVALUATION</h3>
+        <br/><h3>Food Restriction Suggests...</h3>
         <p><b>Fresh Fruits and Vegetables:</b></p>
         <p>Provide essential vitamins, minerals, and antioxidants that support the immune system.</p>
         
@@ -2300,7 +2300,7 @@
         </p>{% endif %}
 
         {% if age|int >= 1 and diagnosis in [ 'Rhabdomyosarcoma' ] and day in ['monday', 'tuesday', 'wednesday', 'thursday', 'friday'] %}<br><p>
-          <h3>INTERVENTION</h3>
+          <h3></h3>
           <p><b>Avoid Processed Meats:</b></p>
           <p>Steer clear of hot dogs, sausages, and deli meats as they contain preservatives and additives that can be harmful.</p>
           
@@ -2323,7 +2323,7 @@
           <p>Including colas and certain energy drinks, which can negatively impact health.</p>
           
           
-        <br/><h3>EVALUATION</h3>
+        <br/><h3>Food Restriction Suggests...</h3>
         <p><b>Track Snack Choices and Sugar Intake:</b></p>
         <p>Use a daily log to monitor your snack choices and sugar intake to ensure you are avoiding high-sugar foods.</p>
         
@@ -2339,7 +2339,7 @@
         </p>{% endif %}
 
         {% if age|int >= 1 and diagnosis in [ 'Osteosarcoma' ] and day in ['monday', 'tuesday', 'wednesday', 'thursday', 'friday'] %}<br><p>
-          <h3>INTERVENTION</h3>
+          <h3></h3>
           <p><b>Avoid Processed Foods:</b></p>
           <p>These are high in sodium and unhealthy fats, which can be detrimental to health.</p>
           
@@ -2355,7 +2355,7 @@
           <p><b>Avoid High-Sodium Foods:</b></p>
           <p>Managing sodium intake is important for controlling blood pressure and avoiding fluid retention.</p>          
           
-        <br/><h3>EVALUATION</h3>
+        <br/><h3>Food Restriction Suggests...</h3>
         <p><b>Muscle Repair:</b></p>
         <p>Lean proteins, such as chicken, fish, tofu, and legumes, are crucial for muscle repair and maintaining strength, especially during cancer treatment.</p>
         
@@ -2367,7 +2367,7 @@
         </p>{% endif %}
 
         {% if age|int >= 1 and diagnosis in [ 'Multiple Myeloma' ] and day in ['monday', 'tuesday', 'wednesday', 'thursday', 'friday'] %}<br><p>
-          <h3>INTERVENTION</h3>
+          <h3></h3>
           <p><b>Avoid Processed Foods:</b></p>
           <p>Processed foods are often high in sodium, unhealthy fats, and sugars, which can negatively impact health.</p>
           
@@ -2384,7 +2384,7 @@
           <p>Alcohol can interfere with treatment and overall health, so excessive consumption should be avoided.</p>
                  
 
-        <br/><h3>EVALUATION</h3>
+        <br/><h3>Food Restriction Suggests...</h3>
         <p><b>Fruits and Vegetables:</b></p>
         <p>Rich in vitamins, minerals, and antioxidants. Examples include berries, leafy greens, broccoli, and carrots.</p>
         
@@ -2403,7 +2403,7 @@
         </p>{% endif %}
 
         {% if age|int >= 1 and diagnosis in [ 'Wilms Tumor' ] and day in ['monday', 'tuesday', 'wednesday', 'thursday', 'friday'] %}<br><p>
-          <h3>INTERVENTION</h3>
+          <h3></h3>
           <p><b>Avoid Processed Foods:</b></p>
           <p>Often high in sodium, unhealthy fats, and sugars, which can negatively impact health.</p>
           
@@ -2419,7 +2419,7 @@
           <p><b>Avoid Excessive Alcohol:</b></p>
           <p>Alcohol can interfere with treatment and overall health, so excessive consumption should be avoided.</p>
           
-        <br/><h3>EVALUATION</h3>
+        <br/><h3>Food Restriction Suggests...</h3>
         <p><b>Fruits and Vegetables:</b></p>
         <p>Rich in vitamins, minerals, and antioxidants. Examples include berries, leafy greens, broccoli, and carrots.</p>
         
