--- a/templates/patient/plan.html
+++ b/templates/patient/plan.html
@@ -61,7 +61,6 @@
               <img src="{{ url_for('static', filename='img/hamburger_menu.png') }}" class="logo" alt="Logo" />
             </div>
           </li>
-          <li><a href="#account">Account</a></li>
           <li>
             <a href="#">
               <div class="logo-nav">
@@ -70,7 +69,7 @@
               </div>
             </a>
           </li>
-          <li><a href="#schedule_slot">Schedule a Slot</a></li>
+          <li><a href="{{ url_for('.patient_schedule') }}">Schedule a Slot</a></li>
           <li>
             <a href="{{ url_for('.index') }}" style="display: flex; flex-direction: column; align-items: center;">
               <img src="{{ url_for('static', filename='img/logout_icon.png') }}" alt="Logout Icon" style="width: 25px; height: auto; margin-bottom: 5px" />
