--- a/templates/patient/plan.html
+++ b/templates/patient/plan.html
@@ -2259,7 +2259,7 @@
         
         </p>{% endif %}
 
-        {% if age|int >= 1 and diagnosis in [ 'Brain tumor' ] and day in ['monday', 'tuesday', 'wednesday', 'thursday', 'friday'] %}<br><p>
+        {% if age|int >= 1 and diagnosis in [ 'Brain tumor' ] and day in ['monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday','sunday'] %}<br><p>
           <h3></h3>
           <p><b>Avoid Caffeinated Beverages and Foods:</b></p>
           <p>Caffeine can exacerbate headaches and cause dehydration, which may worsen symptoms.</p>
