--- a/templates/patient/wellnessplan.html
+++ b/templates/patient/wellnessplan.html
@@ -37,7 +37,7 @@
           </li>
           
           <li>
-            <a href="#">
+            <a href="{{ url_for('.patient_dashboard') }}">
               <div class="logo-nav">
                 <img src="{{ url_for('static', filename='img/Logo-nobg.png') }}" class="logo" alt="Logo" />
                 <span>Bahay Aruga</span>
